--- a/licencias-html.html
+++ b/licencias-html.html
@@ -79,6 +79,11 @@
 		<li class="wnd-homepage">
 			<a class="menu-item" href="/"><span class="menu-item-text">Inicio</span></a>
 			
+		</li><li>
+			<a class="menu-item" href="https://contacto.b-x-v.xyz"><span class="menu-item-text">Contacto</span></a>
+			
+		</li><li>
+			<a class="menu-item" href="/siguenos"><span class="menu-item-text">Redes sociales</span></a>
 		</li>
 	</ul>
 	<span class="more-text">Más</span>
