--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<a class="menu-item" href="/"><span class="menu-item-text">Inicio</span></a>
 			
 		</li><li>
-			<a class="menu-item" href="https://contacto.b-x-v.xyz"><span class="menu-item-text">Contacto</span></a>
+			<a class="menu-item" href="https://forms.b-x-v.xyz/contacto"><span class="menu-item-text">Contacto</span></a>
 			
 		</li><li>
 			<a class="menu-item" href="/siguenos"><span class="menu-item-text">Redes sociales</span></a>
