--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 	<div class="s-w cf">
 		<div class="s-o cf">
 			<div class="s-bg">
-				<div class="s-bg-l wnd-background-image fx-none bgatt-parallax bgpos-center-center" style="background-image: url(&quot;https://b-x-v.xyz/img/background.png); background-size: 2092.44px 1177px; background-attachment: fixed; background-position: 50% -100px;" resized-imgw="2092.4444444444443" resized-imgh="1177">
+				<div class="s-bg-l wnd-background-image fx-none bgatt-parallax bgpos-center-center" style="background-image: url(https://b-x-v.xyz/img/background.png); background-size: 2092.44px 1177px; background-attachment: fixed; background-position: 50% -100px;" resized-imgw="2092.4444444444443" resized-imgh="1177">
 					
 				</div>
 				<div class="s-bg-l s-bg-lo overlay-black"></div>
