--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<div class="slogan-container">
 				<div class="s-c">
 					<div class="l-s logo-slogan claim"><span class="sit b claim-bg-inv claim-wb proxima-nova claim-80">
-	<span class="sit-w"><span class="sit-c">Viviendo sueños</span></span>
+	<span class="sit-w"><span class="sit-c">Solo cumplimos y relatamos sueños</span></span>
 </span></div>
 				</div>
 			</div>
