--- a/siguenos/index.html
+++ b/siguenos/index.html
@@ -41,10 +41,10 @@
         <a target="_blank" class="hover-scale-inset" href="https://www.facebook.com/B-V-104210095017194/"><i class="fab fa-facebook-f"></i> Facebook</a>
         <a target="_blank" class="hover-scale-inset" href="https://www.instagram.com/brenvazem"><i class="fab fa-instagram"></i> Instagram</a>
         <a target="_blank" class="hover-scale-inset" href="/youtube"><i class="fab fa-youtube"></i> Youtube</a>
-		    <a class="hover-scale-inset" href="/"><i class="fa fa-globe"></i> Inicio</a>
-       <a target="_blanck" class="hover-scale-inset" href="https://anchor.fm/brenvazem"><i class="fa fa-anchor" aria-hidden="true"></i> Anchor</a>
-      <a target="_blanck" class="hover-scale-inset" href="https://uvamtx.xyz/proximamente"><i class="fa fa-spotify" aria-hidden="true"></i> Próximamente</a>
-      <a target="_blanck" class="hover-scale-inset" href="https://uvamtx.xyz/proximamente"><i class="fa fa-podcast" aria-hidden="true"></i> Próximamente</a>
+	<a class="hover-scale-inset" href="/"><i class="fa fa-globe"></i> Inicio</a>
+       	<a target="_blanck" class="hover-scale-inset" href="https://anchor.fm/brenvazem"><i class="fa fa-anchor" aria-hidden="true"></i> Anchor</a>
+      	<a target="_blanck" class="hover-scale-inset" href="https://uvamtz.xyz/proximamente"><i class="fa fa-spotify" aria-hidden="true"></i> Próximamente</a>
+      	<a target="_blanck" class="hover-scale-inset" href="https://uvamtz.xyz/proximamente"><i class="fa fa-podcast" aria-hidden="true"></i> Próximamente</a>
     </main>
 </body>
 <!-- partial -->
