--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </div><div class="column-wrapper cw cf">
 	<div class="cw-c cf"><div class="column-content c cf pr pr-0 pr-320 pr-365 pr-400 pr-480" style="width:51.71%;">
 	<div class="c-c cf"><div class="b-img b-img-link b b-s cf wnd-orientation-square wnd-type-image img-s-n" style="margin-left:0;margin-right:0;" id="wnd_ImageBlock_453874">
-    <a class="b-img-a" title="" href="https://anchor.fm/brenvazem" rel="nofollow" target="_blank">
+    <a class="b-img-a" title="" href="/siguenos" rel="nofollow" target="_blank">
         <div class="b-img-w">
             <div class="b-img-c" style="padding-bottom:100%;text-align:center;">
 				<img title="" src="/img/B x V.png" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;">
@@ -159,7 +159,7 @@
 </div><div class="column-content c cf pr pr-0 pr-320 pr-365 pr-400 pr-480" style="width:48.29%;">
 	<div class="c-c cf"><div class="b b-text cf">
 	<div class="b-c b-text-c b-s b-s-t60 b-s-b60 cf"><p></p><ol>B×V es un podcast interpretado por Brenda Domínguez y Eduardo Vázquez (Vazem), el cual tratará principalmente sobre entrevistas a distintas personas antes de la fama, o sobre cosas nuevas del actual entretenimiento de todo contenido.&nbsp;<br>
-</ol><ol>Puedes escucharnos en tu plataforma favorita, dando clic en el botón de redes sociales, o <a href="https://b-x-v.xyz/siguenos" rel="nofollow" target="_blank">aquí</a>.</ol><ol>También puedes seguir a Vazem dando <a href="http://b-x-v.xyz/vazem" rel="nofollow" target="_blank">clic aquí</a>, de igual manera puedes seguir a Brenda dando <a href="http://b-x-v.xyz/brenda" rel="nofollow" target="_blank">clic aquí</a>.</ol>
+</ol><ol>Puedes escucharnos en tu plataforma favorita, dando clic en el botón de redes sociales, o <a href="https://b-x-v.xyz/siguenos" rel="nofollow">aquí</a>.</ol><ol>También puedes seguir a Vazem dando <a href="http://b-x-v.xyz/vazem" rel="nofollow" target="_blank">clic aquí</a>, de igual manera puedes seguir a Brenda dando <a href="http://b-x-v.xyz/brenda" rel="nofollow" target="_blank">clic aquí</a>.</ol>
 </div>
 </div><div class="b b-s b-s-t150 b-s-b150 b-btn b-btn-1 wnd-align-center">
 	<div class="b-btn-c">
