--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 </div>
 </div><div class="b b-s b-s-t150 b-s-b150 b-btn b-btn-1 wnd-align-center">
 	<div class="b-btn-c">
-		<a class="b-btn-l" href="https://b-x-v.xyz/siguenos" rel="nofollow" target="_blank">
+		<a class="b-btn-l" href="https://b-x-v.xyz/siguenos" rel="nofollow">
 			<span class="b-btn-t">Escúchanos aquí</span>
 		</a>
 	</div>
