--- a/siguenos/index.html
+++ b/siguenos/index.html
@@ -6,21 +6,21 @@
     <!-- Primary Meta Tags -->
 	<link rel="shortcut-icon" href="https://b-x-v.xyz/assets/favicon.ico">
 	<link rel="icon" href="https://b-x-v.xyz/assets/favicon.ico">
-    <title>B×V</title>
-    <meta name="title" content="B×V">
+    <title>Redes sociales</title>
+    <meta name="title" content="Redes sociales">
     <meta name="description" content="Solo vivimos para cumplir y contar los sueños">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://b-x-v.xyz">
-    <meta property="og:title" content="B×V">
+    <meta property="og:title" content="Redes sociales">
     <meta property="og:description" content="Solo vivimos para cumplir y contar los sueños...">
     <meta property="og:image" content="https://b-x-v.xyz/img/B x V.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://b-x-v.xyz">
-    <meta property="twitter:title" content="B×V">
+    <meta property="twitter:title" content="Redes sociales">
     <meta property="twitter:description" content="No sé por qué hice esto, pero gracias por entrar aquí.">
     <meta property="twitter:image" content="https://b-x-v.xyz/img/B x V.png">
     <!-- CSS -->
