--- a/siguenos/index.html
+++ b/siguenos/index.html
@@ -6,7 +6,7 @@
     <!-- Primary Meta Tags -->
 	<link rel="shortcut-icon" href="https://b-x-v.xyz/assets/favicon.ico">
 	<link rel="icon" href="https://b-x-v.xyz/assets/favicon.ico">
-    <title>Redes sociales</title>
+    <title>REDES SOCIALES</title>
     <meta name="title" content="Redes sociales">
     <meta name="description" content="Solo vivimos para cumplir y contar los sueños">
 
