--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 			
 		</li><li>
 			<a class="menu-item" href="/siguenos"><span class="menu-item-text">Redes sociales</span></a>
+		</li><li>
+			<a class="menu-item" href="/podcast"><span class="menu-item-text">Podcast</span></a>
 		</li>
 	</ul>
 	<span class="more-text">Más</span>
