--- a/vazem.html
+++ b/vazem.html
@@ -1,33 +1,7 @@
-
-<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Primary Meta Tags -->
-	  <link rel="shortcut-icon" href="https://scontent.fqro2-1.fna.fbcdn.net/v/t1.0-9/106588992_113039617132120_7418075078321122980_o.jpg?_nc_cat=106&ccb=2&_nc_sid=09cbfe&_nc_ohc=c399vrXehtgAX8dsZvB&_nc_ht=scontent.fqro2-1.fna&oh=5b982147aa3ddbc1e6307eee91bc55cc&oe=602E24E0">
-  	<link rel="icon" href="https://scontent.fqro2-1.fna.fbcdn.net/v/t1.0-9/106588992_113039617132120_7418075078321122980_o.jpg?_nc_cat=106&ccb=2&_nc_sid=09cbfe&_nc_ohc=c399vrXehtgAX8dsZvB&_nc_ht=scontent.fqro2-1.fna&oh=5b982147aa3ddbc1e6307eee91bc55cc&oe=602E24E0">
-    <title>Vazem | Equis</title>
-    <meta name="title" content="Vazem | Equis">
-    <meta name="description" content="¿Me podrías ayudar a entrar aquí? :3">
-    <meta http-equiv="refresh" content="0;https://vazem-x.tk">
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://b-x-v.xyz">
-    <meta property="og:title" content="Vazem | Equis">
-    <meta property="og:description" content="No sé por qué hice esto, pero gracias por entrar aquí">
-    <meta property="og:image" content="https://mundocracking.net/uploads/monthly_2021_01/564305653_Untitleddesign-High-Quality(1).thumb.jpg.1e2f0e2c18eac3f2ec47515e1e08b8f8.jpg">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://b-x-v.xyz">
-    <meta property="twitter:title" content="Vazem | Equis">
-    <meta property="twitter:description" content="No sé por qué hice esto, pero gracias por entrar aquí.">
-    <meta property="twitter:image" content="">
-    <!-- CSS -->
-    <link rel="stylesheet" href="./style.css">
-    <script src="https://kit.fontawesome.com/82249891c9.js" crossorigin="anonymous"></script>
-</head>
-<body>
-</body>
+<meta charset="utf-8"><link rel="shortcut icon" href="https://b-x-v.xyz/assets/favicon.ico"><link rel="apple-touch-icon" href="https://b-x-v.xyz/assets/favicon.ico"><link rel="icon" href="https://b-x-v.xyz/assets/favicon.ico">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+	<meta name="msapplication-tap-highlight" content="no">
+<title>Vazem X</title><style>*{margin:0;padding:0;}body,html{height:100vh}iframe{height:100vh;width:100vw;border:none;}</style><meta name="viewport" content="width=device-width, initial-scale=1.0"><iframe src="https://vazem-x.tk"></iframe>
 </html>
