--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 	<title>404 ERROR</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
 	<meta name="msapplication-tap-highlight" content="no">
+	<meta http-equiv="refresh" content="90;/">
 	<link href="https://d1di2lzuh97fh2.cloudfront.net/files/35/35v/35vdsu.css?ph=fa7416c12c" rel="stylesheet">
     <link href="https://d1di2lzuh97fh2.cloudfront.net/files/0m/0m4/0m4i9k.css?ph=fa7416c12c" rel="stylesheet">
 <link rel="stylesheet" href="https://d1di2lzuh97fh2.cloudfront.net/files/3x/3xl/3xl5j1.css?ph=fa7416c12c" data-wnd_color_scheme_file=""><link rel="stylesheet" href="https://d1di2lzuh97fh2.cloudfront.net/files/3r/3re/3reco4.css?ph=fa7416c12c" data-wnd_additive_color_file=""><link rel="stylesheet" href="https://d1di2lzuh97fh2.cloudfront.net/files/38/381/3814xy.css?ph=fa7416c12c" data-wnd_typography_file=""><meta name="description" content="Por favor verifica bien el url (https://b-x-v.xyz/example) que haz usado, ya que en este sitio no disponemos de este, o quizás este sitio está en remodelación."><meta name="keywords" content=""><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="black"><meta name="format-detection" content="telephone=no">
