--- a/siguenos/index.html
+++ b/siguenos/index.html
@@ -43,8 +43,8 @@
         <a target="_blank" class="hover-scale-inset" href="/youtube"><i class="fab fa-youtube"></i> Youtube</a>
 	<a class="hover-scale-inset" href="/"><i class="fa fa-globe"></i> Inicio</a>
        	<a target="_blanck" class="hover-scale-inset" href="https://anchor.fm/brenvazem"><i class="fa fa-anchor" aria-hidden="true"></i> Anchor</a>
-      	<a target="_blanck" class="hover-scale-inset" href="https://uvamtz.xyz/proximamente"><i class="fa fa-spotify" aria-hidden="true"></i> Próximamente</a>
-      	<a target="_blanck" class="hover-scale-inset" href="https://uvamtz.xyz/proximamente"><i class="fa fa-podcast" aria-hidden="true"></i> Próximamente</a>
+      	<a target="_blanck" class="hover-scale-inset" href="/proximamente"><i class="fa fa-spotify" aria-hidden="true"></i> Próximamente</a>
+      	<a target="_blanck" class="hover-scale-inset" href="/proximamente"><i class="fa fa-podcast" aria-hidden="true"></i> Próximamente</a>
     </main>
 </body>
 <!-- partial -->
