--- a/DimeYoungB.html
+++ b/DimeYoungB.html
@@ -1,1 +1,9 @@
-
+<html><head>
+      <meta http-equiv="refresh" content="0;https://push.fm/fl/nmemfnws">
+      <meta property="og:image" content="https://i.scdn.co/image/ab67616d0000b273617e79c9d8884f905371bce2">
+      <meta property="og:title" content="Dime - Young B | UVA Music">
+      <meta property="og:description" content="Choose your favorite platform!">
+      <link rel="shortcut-icon" href="https://music.uvamtz.xyz/img/logo.png">
+</head>
+<body></body>
+</html>
