--- a/vazem.html
+++ b/vazem.html
@@ -1,7 +1,2 @@
-<html>
-<meta charset="utf-8"><link rel="shortcut icon" href="https://b-x-v.xyz/assets/favicon.ico"><link rel="apple-touch-icon" href="https://b-x-v.xyz/assets/favicon.ico"><link rel="icon" href="https://b-x-v.xyz/assets/favicon.ico">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-	<meta name="msapplication-tap-highlight" content="no">
-<title>Vazem X</title><style>*{margin:0;padding:0;}body,html{height:100vh}iframe{height:100vh;width:100vw;border:none;}</style><meta name="viewport" content="width=device-width, initial-scale=1.0"><iframe src="https://vazem-x.tk"></iframe>
-</html>
+<html><link rel="shortcut icon" href="https://cdn.bio.link/uploads/profile_pictures/2021-06-24/jXQx7rBvOuEO9ddVHR187xcPJ0fuf23.webp">
+<title>vazemeduardo</title><style>*{margin:0;padding:0;}body,html{height:100vh}iframe{height:100vh;width:100vw;border:none;}</style><meta name="viewport" content="width=device-width, initial-scale=1.0"><iframe src="https://equis01.bio.link"></iframe></html>
